# octowatch-irlightcontrol

./: README.md  compile.sh  libpigpio.pc  meson.build  start.sh
src/cpp/: IrLightControl.cpp  Main.cpp
src/cpp/network/: Connection.cpp  TcpConnection.cpp  TcpServer.cpp
src/h/: IrLightControl.h  Logging.h  TcpServer.h
